404 spacing fixed

--- a/Hangman Game Project/css/style404.css
+++ b/Hangman Game Project/css/style404.css
@@ -1,5 +1,4 @@
 /* Variable Declarations */
-/* Author Harkamal */
 :root {
     --firstMenuColor: #10c2a7;
     --containerBackground: #FFECB3;
@@ -13,31 +12,29 @@
 }
 
 /* Styles */
-html,
-body {
+
+body, html {
     margin: 0;
     padding: 0;
     font-family: var(--defaultFont);
-    height: 100vh;
-
+    height: 100%;
+    background: var(--containerBackground);
 }
 
 #wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     width: 100%;
-    background: var(--containerBackground);
+    min-height: 100vh;
+    background-color: var(--containerBackground);
 }
-
 
 header {
     text-align: center;
     font-family: var(--headingFont);
     color: var(--container2Background);
-    /* margin-bottom: 20px; */
-    padding: 10px;
+    font-size: 25px;
 }
 
 nav {
@@ -45,15 +42,12 @@ nav {
     padding: 20px 20px;
     border-radius: 0 0 10px 10px;
     border-bottom: var(--hoverColor) solid 5px;
-
     font-size: 20px;
     justify-content: space-evenly;
     align-self: center;
-
     background: var(--colorful);
     cursor: pointer;
 }
-
 
 nav ul {
     list-style-type: none;
@@ -69,10 +63,8 @@ nav ul li {
 nav ul li a {
     text-decoration: none;
     color: var(--container2Background);
-
 }
 
-/* Styles for notActive class */
 .notActive {
     color: gray;
     text-decoration: none;
@@ -81,44 +73,31 @@ nav ul li a {
 }
 
 .notActive:hover {
-
     cursor: none;
 }
 
-/* Styles for hover effect */
 nav ul li a:hover {
-
     text-decoration: underline;
     color: var(--hoverColor);
 }
 
-
-
 footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
     text-align: center;
     font-size: 16px;
-    /* margin-top: 20px; */
     background: var(--colorful);
-    /* display: flex; */
     border-radius: 10px 10px 0 0;
     border-top: var(--hoverColor) solid 5px;
-
 }
-
-
 
 footer span {
     color: var(--container2Background);
 }
 
-h1 {
-    font-size: 25px;
-    margin-bottom: 10px;
-}
-
 h2 {
     font-size: 20px;
-    margin-bottom: 10px;
     text-align: center;
 }
 
@@ -127,39 +106,30 @@ p {
     text-align: center;
 }
 
-img {
-    max-width: 90%;
-    height: auto;
-    align-self: center;
-    align-items: center;
-    margin: 10px;
-    border-radius: 25px;
-}
-
 .allItems {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
-    /* Align text center */
+}
+
+img {
+    max-width: 90%;
+    max-height: 450px;
+    align-self: center;
+    align-items: center;
+    margin: 10px;
+    border-radius: 25px;
 }
 
 @media only screen and (max-width: 768px) {
-    h1 {
-        font-size: 18px;
-
-    }
-
-    body,
-    h2 {
+    body, h2 {
         font-size: 16px;
     }
 
-    nav,
-    p {
+    nav, p {
         font-size: 12px;
-
     }
 
     nav {
@@ -169,6 +139,7 @@ img {
     nav ul li {
         margin-right: 10px;
     }
+
     img {
         max-width: 60%;
         height: auto;
